[gd_scene load_steps=4 format=3 uid="uid://bf4b84etj0eqp"]

[ext_resource type="Script" path="res://Scene_Switcher/Menu/menu_see_score.gd" id="1_x7d11"]
[ext_resource type="Texture2D" uid="uid://cqeuuu81v6mah" path="res://Scene_Switcher/Menu/asset/main menu/fotor-ai-2024053094237.jpg" id="2_wb6pf"]
[ext_resource type="Theme" uid="uid://bae841tqt1b6d" path="res://Scene_Switcher/alligator_theme.tres" id="3_ajonh"]

[node name="menu_see_score" type="CanvasLayer"]
script = ExtResource("1_x7d11")

[node name="Menu_Pic" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_wb6pf")
expand_mode = 2
flip_h = true

[node name="cont" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_ajonh")
theme_override_constants/margin_top = 16
theme_override_constants/margin_bottom = 64

[node name="columns" type="HBoxContainer" parent="cont"]
layout_mode = 2

[node name="space_left" type="MarginContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="lines" type="VBoxContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 4.0
theme_override_constants/separation = 48

[node name="Title" type="Label" parent="cont/columns/lines"]
layout_mode = 2
theme_override_colors/font_color = Color(0.205314, 0.310305, 0.101684, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 0.501961)
theme_override_constants/shadow_offset_x = 4
theme_override_constants/shadow_offset_y = 4
theme_override_constants/outline_size = 4
theme_override_constants/shadow_outline_size = 2
theme_override_font_sizes/font_size = 140
text = "Score - Top 10"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cont_score" type="Panel" parent="cont/columns/lines"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 4.0

[node name="cont_bg" type="MarginContainer" parent="cont/columns/lines/cont_score"]
layout_mode = 2
offset_right = 1275.0
offset_bottom = 605.0
theme_override_constants/margin_left = -48
theme_override_constants/margin_top = -16
theme_override_constants/margin_right = -48
theme_override_constants/margin_bottom = -16

[node name="ColorRect" type="ColorRect" parent="cont/columns/lines/cont_score/cont_bg"]
layout_mode = 2
color = Color(0.621524, 0.621524, 0.621524, 0.643137)

[node name="scoreboard" type="VBoxContainer" parent="cont/columns/lines/cont_score"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="title" type="HBoxContainer" parent="cont/columns/lines/cont_score/scoreboard"]
modulate = Color(0.203922, 0.309804, 0.101961, 1)
layout_mode = 2
size_flags_vertical = 2

[node name="player_name" type="Label" parent="cont/columns/lines/cont_score/scoreboard/title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
text = "Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="score" type="Label" parent="cont/columns/lines/cont_score/scoreboard/title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
text = "Score"
horizontal_alignment = 1
vertical_alignment = 1

[node name="difficulty_level" type="Label" parent="cont/columns/lines/cont_score/scoreboard/title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
text = "Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="date" type="Label" parent="cont/columns/lines/cont_score/scoreboard/title"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_shadow_color = Color(0.281187, 0.281187, 0.281187, 1)
theme_override_constants/shadow_offset_x = 1
theme_override_constants/shadow_offset_y = 1
theme_override_constants/outline_size = 1
theme_override_constants/shadow_outline_size = 2
text = "Record"
horizontal_alignment = 1
vertical_alignment = 1

[node name="cont" type="ScrollContainer" parent="cont/columns/lines/cont_score/scoreboard"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 10.0

[node name="lines" type="VBoxContainer" parent="cont/columns/lines/cont_score/scoreboard/cont"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="quit_cont" type="MarginContainer" parent="cont/columns/lines"]
layout_mode = 2
theme_override_constants/margin_left = 480
theme_override_constants/margin_right = 480

[node name="Quit_Button" type="Button" parent="cont/columns/lines/quit_cont"]
layout_mode = 2
text = "Quit"

[node name="space_right" type="MarginContainer" parent="cont/columns"]
layout_mode = 2
size_flags_horizontal = 3

[node name="base_node" type="Node" parent="."]

[node name="one_line" type="HBoxContainer" parent="base_node"]
visible = false
offset_right = 100.0
offset_bottom = 93.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme_override_constants/separation = 32

[node name="player_name" type="Label" parent="base_node/one_line"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="score" type="Label" parent="base_node/one_line"]
layout_mode = 2
size_flags_horizontal = 3
vertical_alignment = 1

[node name="difficulty_level" type="Label" parent="base_node/one_line"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[node name="date" type="Label" parent="base_node/one_line"]
layout_mode = 2
size_flags_horizontal = 3
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="cont/columns/lines/quit_cont/Quit_Button" to="." method="_on_quit_button_pressed"]
